# parallelHWs

hw/hw3/: CMakeLists.txt  expOfx.kdev4  factorial.h  hw3.kdev4  integer.c  integer.h  main.c  pefactorial.h  power.h  utility.h
hw/hw3/.kdev4/: hw3.kdev4
hw/hw4/Amiri_hw4/: CMakeLists.txt  addVectorCUDA.cu
hw/hw5/: report.tex
hw/hw5/Amiri_hw5/report/: myreferences.bib
hw/hw5/Amiri_hw5/src/: CMakeLists.txt  commons.h  deviceKernels.h  stencil.cu  utils.h
